--- a/core/build.gradle
+++ b/core/build.gradle
@@ -69,7 +69,10 @@ dependencies {
     compile group: 'dnsjava',                       name: 'dnsjava',                        version: '2.1.7'
     compile group: 'com.icegreen',                  name: 'greenmail',                      version: '1.4.1'
     compile group: 'org.mybatis',                   name: 'mybatis-migrations',             version: '3.2.0'
-
+    compile group: 'org.eclipse.jetty',             name: 'jetty-websocket',                version: '8.1.19.v20160209'
+    compile group: 'org.eclipse.jetty',             name: 'jetty-util',                     version: '8.1.19.v20160209'
+    compile group: 'org.eclipse.jetty',             name: 'jetty-io',                       version: '8.1.19.v20160209'
+    compile group: 'org.eclipse.jetty',             name: 'jetty-http',                     version: '8.1.19.v20160209'
     compile project(':core-model')
     compile project(':orchestrator-api')
     compile project(':cloud-reactor-api')
