CLOUD-61477 Images can be updated from atlas metadata identified by version

--- a/cloud-aws/Makefile
+++ b/cloud-aws/Makefile
@@ -1,5 +1,7 @@
+AWS_ATLAS_VERSION ?= latest
+
 deps:
 	curl -L https://github.com/gliderlabs/sigil/releases/download/v0.4.0/sigil_0.4.0_$(shell uname)_x86_64.tgz | tar -xz -C /usr/local/bin
 
 generate-yml:
-	sigil -f aws-images.tmpl > ./src/main/resources/aws-images.yml
+	sigil -f aws-images.tmpl version=$(AWS_ATLAS_VERSION) > ./src/main/resources/aws-images.yml
