--- a/cloud-gcp/Makefile
+++ b/cloud-gcp/Makefile
@@ -1,7 +1,8 @@
 YAML_NAME=gcp-images
+GCP_ATLAS_VERSION ?= latest
 
 deps:
 	curl -L https://github.com/gliderlabs/sigil/releases/download/v0.4.0/sigil_0.4.0_$(shell uname)_x86_64.tgz | tar -xz -C /usr/local/bin
 
 generate-yml:
-	sigil -f $(YAML_NAME).tmpl > ./src/main/resources/$(YAML_NAME).yml
+	sigil -f $(YAML_NAME).tmpl version=$(GCP_ATLAS_VERSION) > ./src/main/resources/$(YAML_NAME).yml
