nginx config/install, local exporter proxy support

--- a/orchestrator-salt/src/main/resources/salt/salt/unbound/config/01-consul.conf
+++ b/orchestrator-salt/src/main/resources/salt/salt/unbound/config/01-consul.conf
@@ -1,5 +1,7 @@
 stub-zone:
   name: "consul"
+  stub-first: yes
+  stub-addr: {{ salt['network.interface_ip']('eth0') }}@953
   stub-addr: {{ consul_server_address }}@953
 server:
   domain-insecure: "consul"
