--- a/core/build.gradle
+++ b/core/build.gradle
@@ -86,6 +86,7 @@ dependencies {
     runtime project(':orchestrator-swarm')
     runtime project(':orchestrator-marathon')
     runtime project(':orchestrator-salt')
+    runtime project(':orchestrator-yarn')
     runtime project(':cloud-reactor')
     runtime project(':cloud-openstack')
     runtime project(':cloud-gcp')
