jmx java agent config for prometheus

--- a/orchestrator-salt/src/main/resources/salt/salt/unbound/config/01-consul.conf
+++ b/orchestrator-salt/src/main/resources/salt/salt/unbound/config/01-consul.conf
@@ -1,7 +1,9 @@
 stub-zone:
   name: "consul"
   stub-first: yes
+  {%- if salt['network.interface_ip']('eth0') != consul_server_address %}
   stub-addr: {{ salt['network.interface_ip']('eth0') }}@953
+  {%- endif %}
   stub-addr: {{ consul_server_address }}@953
 server:
   domain-insecure: "consul"
